<resources>
    <string name="app_name">WellBender</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="fitness">Fitness</string>
    <string name="history">History</string>
    <string name="good_afternoon">Good Afternoon,</string>
    <string name="example_name">Mert!</string>
    <string name="how_feeling_today">How are you feeling today?</string>
    <string name="read_today">Read Today</string>
    <string name="read_today_desc">Let’s open up to the things that matter the most</string>
    <string name="read_now">Read Now</string>
    <string name="upcoming_write_title_example">Benefits of Drinking Water</string>
    <string name="min_8">8 min</string>
    <string name="reschedule">Reschedule</string>
    <string name="example_author_name">tentengolcu</string>
    <string name="read">Read</string>
    <string name="mark">Mark</string>
    <string name="buy_more">Buy More</string>
    <string name="plan_expired">Plan Expried</string>
    <string name="buy_more_desc">Get back blog access and session credits</string>
    <string name="quote_example">“It is better to conquer yourself than to win a thousand battles lorem ipsum dolor sit amet vela dust” - Mark Zuckerberg</string>
    <string name="may_i_know_your_name_so_i_can_address_you">May I know your name so I can call you?</string>
    <string name="name">Name</string>
    <string name="welcome_example">Welcome ! There are many variations of passages of Lorem Ipsum available.\nHave Fun!</string>
    <string name="_continue">Continue</string>
    <string name="start">Start</string>
    <string name="search">Search</string>
    <string name="search_blogs">Search Blog</string>
</resources>