<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.onboarding.page.WelcomePageFragment">

    <data>

        <variable
            name="viewModel"
            type="com.mertgolcu.wellbender.ui.onboarding.page.WelcomePageViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_title"
            style="@style/Text.Header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/radius_16dp"
            android:layout_marginTop="@dimen/radius_16dp"
            android:text="@string/welcome_example"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_name"
            style="@style/Text.Header.Small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:background="@drawable/rounded_background_8dp"
            android:backgroundTint="@color/dust"
            android:hint="@string/name"
            android:padding="@dimen/margin_16dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_continue"
            style="@style/Text.Header.Small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:backgroundTint="@color/deep"
            android:paddingVertical="@dimen/radius_16dp"
            android:text="@string/start"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:icon="@drawable/ic_chevron_right"
            app:iconGravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_name" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/radius_16dp"
            android:layout_marginTop="@dimen/radius_16dp"
            android:src="@drawable/ic_letter_w_logo_96"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_continue"
            tools:visibility="visible" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>