<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_16dp"
        app:cardCornerRadius="@dimen/margin_16dp"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_orange">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_view_header"
                android:layout_width="0dp"
                android:layout_height="@dimen/size_128dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/backgrounds/scenic" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_view_title"
                style="@style/Text.Header.Small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:textColor="@color/dark_brown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_view_header"
                tools:text="@string/upcoming_write_title_example" />

            <View
                android:id="@+id/view_line"
                android:layout_width="0dp"
                android:layout_height="@dimen/size_1dp"
                android:layout_marginHorizontal="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:background="@drawable/rounded_background_8dp"
                android:backgroundTint="@color/dust"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_view_author"
                style="@style/Text.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:drawableStart="@drawable/ic_person"
                android:drawableTint="@color/soft_orange"
                android:textColor="@color/dark_brown"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_line"
                tools:text="@string/example_author_name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_view_read_time"
                style="@style/Text.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:drawableStart="@drawable/ic_timer"
                android:drawableTint="@color/soft_orange"
                android:textColor="@color/dark_brown"
                app:layout_constraintStart_toStartOf="@id/button_read"
                app:layout_constraintTop_toBottomOf="@id/view_line"
                tools:text="@string/min_8" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_view_publish_date"
                style="@style/Text.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_4dp"
                android:drawableStart="@drawable/ic_calendar"
                android:drawablePadding="@dimen/margin_4dp"
                android:drawableTint="@color/gray"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_author"
                tools:text="31 March 2022" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_read"
                style="@style/Text.Header.Tiny"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:layout_marginBottom="@dimen/margin_16dp"
                android:backgroundTint="@color/orange"
                android:paddingVertical="@dimen/margin_16dp"
                android:text="@string/read"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="@dimen/radius_8dp"
                app:icon="@drawable/ic_books"
                app:iconGravity="end"
                app:iconPadding="@dimen/margin_8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/button_bookmark"
                app:layout_constraintTop_toBottomOf="@id/text_view_author"
                tools:visibility="visible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_bookmark"
                style="@style/Text.Header.Tiny"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:layout_marginBottom="@dimen/margin_16dp"
                android:backgroundTint="@color/soft_orange"
                android:paddingVertical="@dimen/margin_16dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:visibility="invisible"
                app:cornerRadius="@dimen/radius_8dp"
                app:icon="@drawable/ic_bookmark_outlined"
                app:iconGravity="end"
                app:iconPadding="@dimen/margin_8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button_read"
                app:layout_constraintStart_toStartOf="@id/text_view_author"
                app:layout_constraintTop_toBottomOf="@id/text_view_author"
                tools:text="@string/mark" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>